fix: [SRM-14898]: fix for overlapping service name on SLO listing page (#16573)
* fix: [SRM-14898]: fix for overlapping service name on SLO listing page

* passed failing test

--- a/src/modules/85-cv/pages/slos/CVSLOsListingPage.module.scss
+++ b/src/modules/85-cv/pages/slos/CVSLOsListingPage.module.scss
@@ -147,12 +147,6 @@ $headerHeight: 146px;
   height: 80% !important;
 }
 
-.titleInSloTable {
-  white-space: nowrap !important;
-  overflow: hidden !important;
-  text-overflow: ellipsis !important;
-}
-
 .errorBudgetRisk {
   white-space: nowrap !important;
   font-size: var(--font-size-small) !important;
